# traction_analysis

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: dev.ipynb
src/: __init__.py  test.vtp
traction_analysis/: __init__.py  analysis.py  file_handling.py  interpolator.py  processing.py
