[tool.poetry]
name = "traction-analysis"
version = "0.1.0"
description = ""
authors = ["Erich Essmann <essmanne@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyvista = "^0.42.3"
numpy = "^1.26.0"
scipy = "^1.11.3"
jupyter = "^1.0.0"
tqdm = ">=4.66"
pandas = "^2.1.1"

[tool.poetry.scripts]
traction-analysis = "traction_analysis.__init__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
