[tool.poetry]
name = "traction-analysis"
version = "0.1.0"
description = ""
authors = ["Erich Essmann <essmanne@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = ">=1.26"
scipy = ">=1.11"
tqdm = ">=4.66"
pandas = {extras = ["hdf5"], version = ">=2.1"}
pyvista = {extras = ["all"], version = ">=0.42"}
jupyter = {extras = ["all"], version = ">=1.0"}

[tool.poetry.scripts]
traction-analysis = "traction_analysis.__init__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
